# VTK-writer

./: CMakeLists.txt  Doxyfile  README.md
include/: vtkWriter.h  vtk_all_tri.h
src/: main.cpp  vtkWriter.cpp
